test/src/e2e_vm_tests/test_programs/should_pass/storage_into/src/main.sw
contract;

storage {
    b: b256 = std::constants::ZERO_B256,
}

abi MyContract {
    #[storage(write)]
    fn test_function(b: ContractId) -> bool;
}

impl MyContract for Contract {
    #[storage(write)]
    fn test_function(b: ContractId) -> bool {
        storage.b.write(b.into());

        true
    }
}