test/src/e2e_vm_tests/test_programs/should_fail/abi_pure_calls_impure/src/main.sw
contract;

abi MyContract {
    fn test_function() -> bool;
}

impl MyContract for Contract {
    fn test_function() -> bool {
        f()
    }
}

#[storage(read)]
fn f() -> bool {
    true
}
